terminado la tabla

--- a/front/src/css/app.scss
+++ b/front/src/css/app.scss
@@ -34,3 +34,16 @@
 .left-yellow{
     border-left: 5px solid #ffeb3b;
 }
+.w-100{
+    width: 100px;
+}
+.w-150{
+    width: 150px;
+}
+.w-200{
+    width: 200px;
+}
+.table-background tr th{
+  background: #061c2a;
+  color: white;
+}
