terminado cada ventava de ver pedidios

--- a/front/src/css/app.scss
+++ b/front/src/css/app.scss
@@ -47,3 +47,8 @@
   background: #061c2a;
   color: white;
 }
+.border-round{
+  border-radius: 5px;
+  border: 1px solid rgba(0,0,0,.125);
+  padding: 5px;
+}
