creado tesoreria y pedido textos de cantidad

--- a/front/src/css/app.scss
+++ b/front/src/css/app.scss
@@ -43,6 +43,12 @@
 .w-200{
     width: 200px;
 }
+.w-250{
+    width: 250px;
+}
+.w-300{
+    width: 300px;
+}
 .table-background tr th{
   background: #061c2a;
   color: white;
